add profile.jpeg to preload

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       src="https://kit.fontawesome.com/711297a730.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="preload" href="/profile.JPEG" as="image" />
   </head>
   <body>
     <div id="root"></div>
